--- a/app/client/templates/views/account.html
+++ b/app/client/templates/views/account.html
@@ -18,7 +18,7 @@
                             <button class="dapp-icon-button delete icon-trash"></button>
                         {{/if}}
                     </h1>
-                    {{> elements_balance balance=balance changeUnit=true showAllDecimals=true}}                
+                    {{> elements_balance balance=balance changeUnit=true showAllDecimals=true}}
                 {{/with}}
             </div>
 
@@ -72,12 +72,22 @@
                     <div class="row clear wallet-info">
                         {{#if showDailyLimit}}
                             <div class="col col-4 mobile-full">
-                                {{#if $gte version 1}}
-                                    <h3>{{i18n "wallet.accounts.dailyLimit"}} <span style="font-weight: 200;">{{dapp_formatBalance dailyLimit "0,0.00 unit"}}</span></h3>
-                                    {{dapp_formatBalance availableToday "0,0.00 unit"}} {{i18n "wallet.accounts.dailyLimitRemaining"}}
+                                {{#if $neq unit 'ether'}}
+                                    {{#if $gte version 1}}
+                                        <h3>{{i18n "wallet.accounts.dailyLimit"}} <span style="font-weight: 200;">{{dapp_formatBalance dailyLimit "0,0.00 unit"}}</span></h3>
+                                        {{dapp_formatBalance availableToday "0,0.00 unit"}} {{i18n "wallet.accounts.dailyLimitRemaining"}}
+                                    {{else}}
+                                        <h3>{{i18n "wallet.accounts.dailyLimit"}}</h3>
+                                        {{dapp_formatBalance dailyLimit "0,0.00 unit"}}
+                                    {{/if}}
                                 {{else}}
-                                    <h3>{{i18n "wallet.accounts.dailyLimit"}}</h3>
-                                    {{dapp_formatBalance dailyLimit "0,0.00 unit"}}
+                                    {{#if $gte version 1}}
+                                        <h3>{{i18n "wallet.accounts.dailyLimit"}} <span style="font-weight: 200;">{{dapp_formatBalance dailyLimit "0,0.00 " "ether"}} SOIL</span></h3>
+                                        {{dapp_formatBalance availableToday "0,0.00 " "ether"}} SOIL {{i18n "wallet.accounts.dailyLimitRemaining"}}
+                                    {{else}}
+                                        <h3>{{i18n "wallet.accounts.dailyLimit"}}</h3>
+                                        {{dapp_formatBalance dailyLimit "0,0.00 " "ether"}} SOIL
+                                    {{/if}}
                                 {{/if}}
                             </div>
                         {{/if}}
@@ -124,30 +134,12 @@
                             </a>
                         </li>
 
-                        {{#if $eq ($.Session.get "network") "main"}}
-                            <li>
-                                <a href="https://shapeshift.io/shifty.html?destination={{address}}&amp;output=ETH&amp;apiKey=ef8312d8c9b9dda64fb852e8683eac6c33123f8743ff11383fb3bab29a364c01c27343fced4e628db8d5d66d763565763f8699c0fc903ec23db31cb908a944c8" target="_popup" data-popup-width="" data-popup-height="">
-                                    <i class="icon-bitcoin"></i>
-                                    {{i18n "wallet.accounts.buttons.depositBitcoin"}}
-                                </a>
-                            </li>  
-                        {{/if}}
-
-                        {{#if $eq ($.Session.get "network") "main"}}
-                            <li>
-                                <button class="deposit-using-coinbase">
-                                    <i class="icon-credit-card"></i>
-                                    {{i18n "wallet.accounts.buttons.depositUsingCreditCard"}}
-                                </button>
-                            </li>  
-                        {{/if}}
-
                         <li>
                             <button class="copy-to-clipboard-button">
                                 <i class="icon-docs"></i>
                                 {{i18n "wallet.accounts.buttons.copyAddress"}}
                             </button>
-                        </li>                        
+                        </li>
                         <li>
                             <button class="qrcode-button">
                                 <i class="icon-camera"></i>
@@ -161,7 +153,7 @@
                                     {{i18n "wallet.accounts.buttons.showInterface"}}
                                 </button>
                             </li>
-                        {{/if}}                    
+                        {{/if}}
 
                     </ul>
                 </nav>
@@ -190,7 +182,7 @@
                 {{#with customContract}}
                     <h2>{{i18n 'wallet.events.latest'}}</h2>
                     <br>
-                    
+
                     <div>
                         <input type="checkbox" id="watch-events-checkbox" class="toggle-watch-events" checked="{{TemplateVar.get 'watchEvents'}}">
                         <label for="watch-events-checkbox">{{i18n "wallet.contracts.buttons.watchContractEvents"}}</label>
@@ -201,7 +193,7 @@
                             {{> spinner}}
                         </div>
                     {{/if}}
-            
+
                     {{> elements_event_table ids=contractEvents}}
                 {{/with}}
             </div>
